--- a/Shadowrocket.Conf
+++ b/Shadowrocket.Conf
@@ -686,6 +686,7 @@ DOMAIN-SUFFIX,web2project.net,Proxy
 DOMAIN-SUFFIX,webs.com,Proxy
 DOMAIN-SUFFIX,webshots.com,Proxy
 DOMAIN-SUFFIX,websitepulse.com,Proxy
+DOMAIN-SUFFIX,whoer.net,Proxy
 DOMAIN-SUFFIX,wikia.com,Proxy
 DOMAIN-SUFFIX,wikibooks.org,Proxy
 DOMAIN-SUFFIX,wikileaks.ch,Proxy
@@ -845,6 +846,7 @@ DOMAIN-SUFFIX,sogoucdn.com,DIRECT
 DOMAIN-SUFFIX,sr.symcd.com,DIRECT
 DOMAIN,sohu.com,DIRECT
 DOMAIN,sohu.com.cn,DIRECT
+DOMAIN,shipv.net,DIRECT
 DOMAIN-SUFFIX,sjzhushou.com,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
 DOMAIN-SUFFIX,sspai.com,DIRECT
